--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+ 
+    width: 100vw;
+    overflow-x:hidden;
+
 }
 
 code {
@@ -13,8 +17,26 @@ code {
 }
 
 #root {
+  position:relative;
   background: lightsteelblue;
   min-height: 100vh;
   width: 100vw;
 
+}
+
+#footer {
+  background: lightsteelblue;
+  color: darkslategrey;
+  position: absolute;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 1rem;
+  padding-bottom: 1rem;
+  /* height: 4vh; */
+  /* width: 100%; */
+  /* bottom: 0; */
+  /* right: 30px; */
+  /* padding-top: 40px; */
+  /* width: 100%; */
 }
