--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html {
+  height: 100%;
+  background: lightsteelblue;
+}
+
 body {
   margin: 0;
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -8,6 +13,7 @@ body {
  
     width: 100vw;
     overflow-x:hidden;
+    min-height: 100vh;
 
 }
 
@@ -29,14 +35,11 @@ code {
   color: darkslategrey;
   position: absolute;
   width: 100%;
+  /* height: 60px; */
+  /* line-height: 60px; */
   display: flex;
   justify-content: flex-end;
   padding-right: 1rem;
-  padding-bottom: 1rem;
-  /* height: 4vh; */
-  /* width: 100%; */
-  /* bottom: 0; */
-  /* right: 30px; */
-  /* padding-top: 40px; */
-  /* width: 100%; */
+  /* margin-bottom: 2rem; */
+
 }
